log
Thu 04 May 2023 11:05:22 PM UTC: 
 tests:  0|5
total_score: 0/70
177eaac
Thu 04 May 2023 11:12:15 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:60:23: error: iteration 8 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   60 |       new->sudo[i][j] = num;
      |       ~~~~~~~~~~~~~~~~^~~~~
sudoku.c:58:24: note: within this loop
   58 |     for (int j = 1 ; j < 10 ; j++){
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
37b9316
Thu 04 May 2023 11:12:49 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a9708e6
Thu 04 May 2023 11:18:49 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:26: error: comparison between pointer and integer [-Werror]
   59 |       if(new->sudo[i][j] == NULL){
      |                          ^~
sudoku.c:65:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   65 |         if(num == 10) num = 1; return list;
      |         ^~
sudoku.c:65:32: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   65 |         if(num == 10) num = 1; return list;
      |                                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b021f21
Thu 04 May 2023 11:22:06 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:26: error: comparison between pointer and integer [-Werror]
   59 |       if(new->sudo[i][j] == NULL){
      |                          ^~
cc1: all warnings being treated as errors
Compilation failed
c6a544e
Thu 04 May 2023 11:23:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b7e7810
Thu 04 May 2023 11:27:12 PM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
227588e
Thu 04 May 2023 11:29:02 PM UTC: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
85ef24d
Thu 04 May 2023 11:29:56 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5707a5f
Thu 04 May 2023 11:30:26 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
412d27c
Thu 04 May 2023 11:32:26 PM UTC: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
fb94df1
Thu 04 May 2023 11:32:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
15a3e4d
Thu 04 May 2023 11:44:40 PM UTC: 
 sudoku.c | 41 +++++++++++++++++++----------------------
 1 file changed, 19 insertions(+), 22 deletions(-)
 tests:  2|4
total_score: 15/70
bc5e54e
Thu 04 May 2023 11:47:03 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
9cda34b
Fri 05 May 2023 12:35:35 AM UTC: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:65:5: error: expected expression before ‘}’ token
   65 |     }
      |     ^
sudoku.c:61:11: error: unused variable ‘cuadranteJ’ [-Werror=unused-variable]
   61 |       int cuadranteJ;
      |           ^~~~~~~~~~
sudoku.c:60:11: error: unused variable ‘cuadranteI’ [-Werror=unused-variable]
   60 |       int cuadranteI;
      |           ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
febfae3
